6.0.1-RC2